# sirius

./: .clang-format  .clang-tidy  .clangd  .gitignore  4stock_5day.csv  CMakeLists.txt  LICENSE  Makefile  all.sql  cmake_install.cmake  extension_config.cmake  load.txt  test_join.sql  test_null.sql  test_python.py  tpch_load_duckdb.sql  tpch_load_duckdb2.sql  tpch_load_duckdb3.sql  tpch_load_duckdb_nodecimal.sql  tpch_load_duckdb_ori.sql  tpch_load_duckdb_simple.sql  tpch_load_s10.sql  tpch_load_s100.sql  tpch_query.txt
cub_debugging/: README.md  cub_bug  cub_bug.cu
devesh_benchmarking/: large_strings_bench.sql  synthetic_bench.sql  tpch_bench.sql  wikipedia_bench.sql
docker/: Dockerfile
docs/: README.md
duckdb/src/parser/: column_list.cpp
legacy/: arithmetic_expression.cu  distinct_grouped_aggregate.cu  gpu_expression_executor.cpp  gpu_expression_executor.hpp  grouped_aggregate.cu  hash_grouped_aggregate.cu  load.txt  query_specific_filter.cpp  query_specific_filter.cu  query_specific_projection.cpp  query_specific_projection.cu  sirius_extension_cuda.cu  string_grouped_aggregate.cu  test_cudf.cu  test_sorting.cu  ungrouped_aggregate.cu
queries/devesh_test_queries/: q10_expected_result.txt  q10_group_by_test.sql  string_group_and_order_by.txt
queries/tpch/gh200/: q1.txt  q10.txt  q11.txt  q12.txt  q13.txt  q14.txt  q15.txt  q16.txt  q17.txt  q18.txt  q19.txt  q2.txt  q20.txt  q21.txt  q22.txt  q3.txt  q4.txt  q5.txt  q6.txt  q7.txt  q8.txt  q9.txt
queries/tpch/inprogress/: q10.sql  q11.sql  q12.sql  q13.sql  q18.sql  q2.sql  q20.sql  q21.sql  q22.sql  q5.sql  q7.sql  q8.sql
queries/tpch/working/: q1.sql  q10.sql  q11.sql  q13.sql  q14.sql  q15.sql  q16.sql  q17.sql  q18.sql  q19.sql  q2.sql  q20.sql  q21.sql  q22.sql  q3.sql  q4.sql  q5.sql  q7.sql  q8.sql  q9.sql
src/: gpu_buffer_manager.cpp  gpu_columns.cpp  gpu_context.cpp  gpu_executor.cpp  gpu_expression_executor.cpp  gpu_meta_pipeline.cpp  gpu_operator_converter.cpp  gpu_physical_operator.cpp  gpu_physical_plan_generator.cpp  gpu_pipeline.cpp  gpu_query_result.cpp  komodo_extension.cpp  query_specific_filter.cpp  query_specific_projection.cpp  sirius_extension.cpp
src/cuda/: allocator.cu  communication.cu  komodo_extension_cuda.cu  print_column.cu  sirius_extension_cuda.cu  utils.cu
src/cuda/cudf/: CMakeLists.txt  cudf_aggregate.cu  cudf_duplicate_elimination.cu  cudf_groupby.cu  cudf_join.cu  cudf_orderby.cu  cudf_utils.cu  test_cudf.cu  test_sorting.cu
src/cuda/expression_executor/: CMakeLists.txt  gpu_dispatch_materialize.cu  gpu_dispatch_select.cu  gpu_dispatch_string.cu  gpu_dispatcher.cu
src/cuda/operator/: CMakeLists.txt  arbitrary_expression.cu  arithmetic_expression.cu  comparison_expression.cu  cuda_helper.cuh  distinct_grouped_aggregate.cu  grouped_aggregate.cu  hash_grouped_aggregate.cu  hash_join.cu  hash_join_inner.cu  hash_join_multikey.cu  hash_join_right.cu  hash_join_right_semi_anti.cu  hash_join_semi_anti_mark.cu  hash_join_single.cu  materialize.cu  memmove.cu  nested_loop_join.cu  new_grouped_aggregate.cu  optimized_grouped_aggregate.cu  query_specific_filter.cu  query_specific_projection.cu  string_grouped_aggregate.cu  string_grouped_aggregate_v2.cu  string_grouped_aggregate_v3.cu  string_grouped_aggregate_v4.cu  string_order_by.cu  strings_matching.cu  substring.cu  ungrouped_aggregate.cu
src/cuda/query_specific/: CMakeLists.txt  query_specific_filter.cu  query_specific_projection.cu  test_cudf.cu
src/expression_executor/: CMakeLists.txt  gpu_expression_executor.cpp  gpu_expression_executor_state.cpp
src/expression_executor/specializations/: gpu_execute_between.cpp  gpu_execute_case.cpp  gpu_execute_cast.cpp  gpu_execute_comparison.cpp  gpu_execute_conjunction.cpp  gpu_execute_constant.cpp  gpu_execute_function.cpp  gpu_execute_operator.cpp  gpu_execute_reference.cpp
src/include/: communication.hpp  gpu_buffer_manager.hpp  gpu_columns.hpp  gpu_context.hpp  gpu_executor.hpp  gpu_expression_executor.hpp  gpu_meta_pipeline.hpp  gpu_operator_converter.hpp  gpu_physical_operator.hpp  gpu_physical_plan_generator.hpp  gpu_pipeline.hpp  gpu_query_result.hpp  gpu_table_function.hpp  komodo_extension.hpp  sirius_extension.hpp  utils.hpp
src/include/cudf/: cudf_utils.hpp
src/include/expression_executor/: gpu_dispatcher.hpp  (+2 more)
src/legacy/: gpu_expression_executor.hpp  grouped_aggregate.cu  query_specific_filter.cpp  sirius_extension_cuda.cu  string_grouped_aggregate.cu  test_cudf.cu  ungrouped_aggregate.cu
src/operator/: CMakeLists.txt  gpu_materialize.cpp  gpu_physical_column_data_scan.cpp  gpu_physical_cte.cpp  gpu_physical_delim_join.cpp  gpu_physical_dummy_scan.cpp  gpu_physical_empty_result.cpp  gpu_physical_filter.cpp  gpu_physical_grouped_aggregate.cpp  gpu_physical_hash_join.cpp  gpu_physical_limit.cpp  gpu_physical_nested_loop_join.cpp  gpu_physical_order.cpp  gpu_physical_projection.cpp  gpu_physical_result_collector.cpp  gpu_physical_result_collector_opt.cpp  gpu_physical_string_matching.cu  gpu_physical_strings_matching.cpp  gpu_physical_substring.cpp  gpu_physical_table_scan.cpp  gpu_physical_top_n.cpp  gpu_physical_ungrouped_aggregate.cpp
src/plan/: CMakeLists.txt  gpu_plan_aggregate.cpp  gpu_plan_column_data_get.cpp  gpu_plan_comparison_join.cpp  gpu_plan_cte.cpp  gpu_plan_delim_get.cpp  gpu_plan_delim_join.cpp  gpu_plan_distinct.cpp  gpu_plan_dummy_scan.cpp  gpu_plan_empty_result.cpp  gpu_plan_expression_get.cpp  gpu_plan_filter.cpp  gpu_plan_get.cpp  gpu_plan_limit.cpp  gpu_plan_order.cpp  gpu_plan_projection.cpp  gpu_plan_recursive_cte.cpp  gpu_plan_top_n.cpp
src/query_specific/: CMakeLists.txt  query_specific_filter.cpp  query_specific_projection.cpp
test/: duckdb_queries.py  generate_test_data.py  get_result.sql  performance_test.py  sirius_queries.py  test_join.sql  test_null.sql  test_python.py
test/answers/: q1.csv  q11.csv  q12.csv  q15.csv  q16.csv  q17.csv  q18.csv  q19.csv  q2.csv  q20.csv  q21.csv  q22.csv  q3.csv  q4.csv  q5.csv  q6.csv  q7.csv  q8.csv  q9.csv
test/sql/: sirius_queries.test
tpch-data/: load_tpch.sql  schema_tpch.sql
(+50 files in other folders)
